# mlir-bignum

./: CMakeLists.txt  CONTRIBUTORS.txt  README.md
cmake/: FindGMP.cmake  GitRevision.cmake  LibUtils.cmake
include/mlir/Extras/Bignum/: ABI.h  Integer.h  IntegerRef.h  IntegerTraits.h  LLVM.h  LimbRange.h  Native.h  Rational.h
lib/: ABI.cpp  CMakeLists.txt  Integer.cpp  Rational.cpp
unittest/: CMakeLists.txt  Integer.cpp  LLVM.cpp  Native.cpp  Rational.cpp
